--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -1,21 +1,27 @@
+.header {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  border-bottom: 1px solid #e0e0e0;
+  padding: 10px 10px;
+}
+
 .navigation {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    padding: 10px 0;
-    background-color: #fff;
-    border-bottom: 1px solid #e0e0e0;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+
+  background-color: #fff;
+
   .navigation__today-btn {
-    background-color: #4285f4;
-    color: #fff;
+    background-color: white;
+    color: black;
     font-weight: 700;
     padding: 5px 15px;
     border-radius: 4px;
   }
-  
+
   .navigation__nav-icon {
     background: none;
     border: none;
@@ -24,10 +30,10 @@
     cursor: pointer;
     padding: 5px;
   }
-  
+
   .navigation__displayed-month {
     font-size: 18px;
     font-weight: bold;
     color: #333;
   }
-  
+}
