--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,25 +58,29 @@
   display: none;
 }
 
+.header {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  border-bottom: 1px solid #e0e0e0;
+  padding: 10px 10px;
+}
+
 .navigation {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
-  padding: 10px 0;
+  gap: 50px;
   background-color: #fff;
-  border-bottom: 1px solid #e0e0e0;
 }
-
-.navigation__today-btn {
-  background-color: #4285f4;
-  color: #fff;
+.navigation .navigation__today-btn {
+  background-color: white;
+  color: black;
   font-weight: 700;
   padding: 5px 15px;
   border-radius: 4px;
 }
-
-.navigation__nav-icon {
+.navigation .navigation__nav-icon {
   background: none;
   border: none;
   font-size: 18px;
@@ -84,8 +88,7 @@
   cursor: pointer;
   padding: 5px;
 }
-
-.navigation__displayed-month {
+.navigation .navigation__displayed-month {
   font-size: 18px;
   font-weight: bold;
   color: #333;
