--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -1,39 +1,1 @@
-.header {
-  display: flex;
-  align-items: center;
-  gap: 50px;
-  border-bottom: 1px solid #e0e0e0;
-  padding: 10px 10px;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 50px;
-
-  background-color: #fff;
-
-  .navigation__today-btn {
-    background-color: white;
-    color: black;
-    font-weight: 700;
-    padding: 5px 15px;
-    border-radius: 4px;
-  }
-
-  .navigation__nav-icon {
-    background: none;
-    border: none;
-    font-size: 18px;
-    color: #333;
-    cursor: pointer;
-    padding: 5px;
-  }
-
-  .navigation__displayed-month {
-    font-size: 18px;
-    font-weight: bold;
-    color: #333;
-  }
-}
+// стили навигации
